cabal-version:   2.4
name:            agda-stdlib-utils
version:         2.0
build-type:      Simple
description:     Helper programs for setting up the Agda standard library.
license:         MIT

tested-with:
  GHC == 9.6.2
  GHC == 9.4.5
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5

common common-build-parameters
  default-language:
    Haskell2010
  default-extensions:
    PatternGuards
    PatternSynonyms

  build-depends:
      base          >= 4.12.0.0 && < 4.19
    , filemanip     >= 0.3.6.2  && < 0.4

executable GenerateEverything
  import:           common-build-parameters
  hs-source-dirs:   .
  main-is:          GenerateEverything.hs

  build-depends:
      directory     >= 1.0.0.0  && < 1.4
    , filepath      >= 1.4.1.0  && < 1.5
    , mtl           >= 2.2.2    && < 2.4

executable AllNonAsciiChars
  import:           common-build-parameters
  hs-source-dirs:   .
  main-is:          AllNonAsciiChars.hs

  build-depends:
      text          >= 1.2.3.1  && < 2.1
