name:            lib
version:         1.2-dev
cabal-version:   >= 1.10
build-type:      Simple
description:     Helper programs.
license:         MIT
tested-with:     GHC == 8.0.2
                 GHC == 8.2.2
                 GHC == 8.4.4
                 GHC == 8.6.2

executable GenerateEverything
  hs-source-dirs:   .
  main-is:          GenerateEverything.hs
  default-language: Haskell2010
  build-depends:      base >= 4.9.0.0 && < 4.13
                    , directory >= 1.0.0.0 && < 1.4
                    , filemanip >= 0.3.6.2 && < 0.4
                    , filepath >= 1.4.1.0 && < 1.5

executable AllNonAsciiChars
  hs-source-dirs:   .
  main-is:          AllNonAsciiChars.hs
  default-language: Haskell2010
  build-depends:      base >= 4.9.0.0 && < 4.13
                    , filemanip >= 0.3.6.2 && < 0.4
