cabal-version:   2.4
name:            TEST_NAME
version:         2.0
build-type:      Simple
description:     Run this test
license:         MIT

common common-build-parameters
  default-language:
    Haskell2010

  default-extensions:
    PatternGuards
    PatternSynonyms

  build-depends:
      base      >= 4.12 && < 4.20

  ghc-options: -Wno-missing-home-modules

executable TEST_NAME
  import:           common-build-parameters
  hs-source-dirs:   _build
  main-is:          MAlonzo/Code/Main.hs
  ghc-options:      -main-is MAlonzo.Code.Main
